--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   mobile_scanner: 3.2.0
   image_picker: ^1.1.2
   firebase_storage: ^12.4.9
+  razorpay_flutter: ^1.4.0
 
 
 dev_dependencies:
